tests/ui/parallel-rustc/cycle_crash.stderr
error[E0391]: cycle detected when 
   |
note: ...which requires ...
  --> $DIR/cycle_crash.rs:4:20
   |
LL | const FOO: usize = FOO;
   |                    ^^^
   = note: ...which again requires , completing the cycle
   = note: cycle used when 
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
